merge changeset 11447 from trunk
git-svn-id: http://svn.codehaus.org/groovy/branches/GROOVY_1_5_X@11506 a5544e8c-8a19-0410-ba12-f9af4593a198